crates/query-engine/tests/snapshots/tests__dup_array_relationship.snap
---
source: crates/query-engine/tests/tests.rs
expression: result
---
SELECT
  isnull([rows].[row_json], '[]') AS [rows]
FROM
  (
    SELECT
      JSON_QUERY([albums].[json], '$') AS [albums],
      JSON_QUERY([Albums].[json], '$') AS [Albums]
    FROM
      [public].[Artist] AS [Artist]
      OUTER APPLY (
        SELECT
          isnull([rows].[row_json], '[]') AS [rows]
        FROM
          (
            SELECT
              [Album].[Title] AS [title]
            FROM
              [public].[Album] AS [Album]
            WHERE
              (
                (1 = 1)
                AND ([Artist].[ArtistId] = [Album].[ArtistId])
              ) FOR JSON PATH,
              INCLUDE_NULL_VALUES
          ) AS [rows]([row_json]) FOR JSON PATH,
          INCLUDE_NULL_VALUES,
          WITHOUT_ARRAY_WRAPPER
      ) AS [albums]([json])
      OUTER APPLY (
        SELECT
          isnull([rows].[row_json], '[]') AS [rows]
        FROM
          (
            SELECT
              [Album].[Title] AS [title]
            FROM
              [public].[Album] AS [Album]
            WHERE
              (
                (1 = 1)
                AND ([Artist].[ArtistId] = [Album].[ArtistId])
              ) FOR JSON PATH,
              INCLUDE_NULL_VALUES
          ) AS [rows]([row_json]) FOR JSON PATH,
          INCLUDE_NULL_VALUES,
          WITHOUT_ARRAY_WRAPPER
      ) AS [Albums]([json])
    ORDER BY
      [Artist].[ArtistId] ASC OFFSET 0 ROWS FETCH NEXT 5 ROWS ONLY FOR JSON PATH,
      INCLUDE_NULL_VALUES
  ) AS [rows]([row_json]) FOR JSON PATH,
  INCLUDE_NULL_VALUES,
  WITHOUT_ARRAY_WRAPPER

[]
