crates/query-engine/tests/snapshots/tests__it_aggregate_distinct_albums.snap
---
source: crates/query-engine/tests/tests.rs
expression: result
---
SELECT
  JSON_QUERY([aggregates].[agg_json], '$') AS [aggregates]
FROM
  (
    SELECT
      COUNT(DISTINCT [Album].[ArtistId]) AS [how_many_distinct_artist_ids]
    FROM
      [public].[Album] AS [Album] FOR JSON PATH,
      INCLUDE_NULL_VALUES,
      WITHOUT_ARRAY_WRAPPER
  ) AS [aggregates]([agg_json]) FOR JSON PATH,
  INCLUDE_NULL_VALUES,
  WITHOUT_ARRAY_WRAPPER

[]
