crates/query-engine/tests/snapshots/tests__it_converts_select_with_limit.snap
---
source: crates/query-engine/tests/tests.rs
expression: result
---
SELECT
  isnull([rows].[row_json], '[]') AS [rows]
FROM
  (
    SELECT
      [Album].[Title] AS [Title]
    FROM
      [public].[Album] AS [Album]
    ORDER BY
      [Album].[AlbumId] ASC OFFSET 3 ROWS FETCH NEXT 5 ROWS ONLY FOR JSON PATH,
      INCLUDE_NULL_VALUES
  ) AS [rows]([row_json]) FOR JSON PATH,
  INCLUDE_NULL_VALUES,
  WITHOUT_ARRAY_WRAPPER

[]
