crates/query-engine/tests/snapshots/tests__it_select_where_not_null.snap
---
source: crates/query-engine/tests/tests.rs
expression: result
---
SELECT
  [rows].[json] AS [rows]
FROM
  (
    SELECT
      [Album].[Title] AS [Title]
    FROM
      [public].[Album] AS [Album]
    WHERE
      NOT ([Album].[AlbumId] IS NULL)
    ORDER BY
      [Album].[AlbumId] ASC OFFSET 100 ROWS FETCH NEXT 5 ROWS ONLY FOR JSON PATH,
      INCLUDE_NULL_VALUES
  ) AS [rows]([json]) FOR JSON PATH,
  INCLUDE_NULL_VALUES,
  WITHOUT_ARRAY_WRAPPER

[]
