crates/query-engine/tests/snapshots/tests__it_select_where_string.snap
---
source: crates/query-engine/tests/tests.rs
expression: result
---
SELECT
  isnull([rows].[row_json], '[]') AS [rows]
FROM
  (
    SELECT
      [Album].[AlbumId] AS [AlbumId]
    FROM
      [public].[Album] AS [Album]
    WHERE
      ([Album].[Title] IN (@P1, @P2)) FOR JSON PATH,
      INCLUDE_NULL_VALUES
  ) AS [rows]([row_json]) FOR JSON PATH,
  INCLUDE_NULL_VALUES,
  WITHOUT_ARRAY_WRAPPER

[(1, String("Mozart: Chamber Music")), (2, String("Something else"))]
