crates/query-engine/tests/snapshots/tests__it_select_where_unrelated_exists.snap
---
source: crates/query-engine/tests/tests.rs
expression: result
---
SELECT
  [rows].[row_json] AS [rows]
FROM
  (
    SELECT
      [album].[Title] AS [title]
    FROM
      [public].[Album] AS [album]
    WHERE
      EXISTS (
        SELECT
        FROM
          [public].[Artist] AS [artist]
        WHERE
          (
            (
              (1 = 1)
              AND ([artist].[Name] = @P1)
            )
            AND ([album].[ArtistId] = [artist].[ArtistId])
          ) FOR JSON PATH,
          INCLUDE_NULL_VALUES
      ) FOR JSON PATH,
      INCLUDE_NULL_VALUES
  ) AS [rows]([row_json]) FOR JSON PATH,
  INCLUDE_NULL_VALUES,
  WITHOUT_ARRAY_WRAPPER

[(1, String("Gilberto Gil"))]
