crates/query-engine/tests/snapshots/tests__it_simple_object_relationship.snap
---
source: crates/query-engine/tests/tests.rs
expression: result
---
SELECT
  isnull([rows].[row_json], '[]') AS [rows]
FROM
  (
    SELECT
      JSON_QUERY([Artist].[json], '$') AS [Artist]
    FROM
      [public].[Album] AS [Album]
      OUTER APPLY (
        SELECT
          isnull([rows].[row_json], '[]') AS [rows]
        FROM
          (
            SELECT
              [Artist].[Name] AS [Name]
            FROM
              [public].[Artist] AS [Artist]
            WHERE
              (
                (1 = 1)
                AND ([Album].[ArtistId] = [Artist].[ArtistId])
              ) FOR JSON PATH,
              INCLUDE_NULL_VALUES
          ) AS [rows]([row_json]) FOR JSON PATH,
          INCLUDE_NULL_VALUES,
          WITHOUT_ARRAY_WRAPPER
      ) AS [Artist]([json])
    ORDER BY
      [Album].[AlbumId] ASC OFFSET 0 ROWS FETCH NEXT 5 ROWS ONLY FOR JSON PATH,
      INCLUDE_NULL_VALUES
  ) AS [rows]([row_json]) FOR JSON PATH,
  INCLUDE_NULL_VALUES,
  WITHOUT_ARRAY_WRAPPER

[]
